validated and corrected color contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -9,6 +9,7 @@ body {
     margin-left: 5%;
     margin-right: 5%;
     color: black;
+    height: auto;
 }
 header {
     display: flex;
@@ -39,13 +40,13 @@ h1 {
     font-size: 1rem;
     padding: 1px;
     margin-top: 30px;
+    color: #202020;
 }
 img {
     margin-left: 20px;
     margin-right: 15px;
     border-radius: 15px;
     margin-left: 10px;
-    /*box-shadow: 10px 0px 30px #c4c4c4;*/
 
 }
 
@@ -75,7 +76,6 @@ nav .active:hover {
 #menu {
     display: block;
     font-size: 2rem;
-    font-weight: 7000;
     text-decoration: none;
     padding: .5rem .75rem;
     text-align: right;
@@ -93,8 +93,6 @@ nav .active:hover {
 .navigation {
     list-style: none;
     margin: 0 auto;
-    max-width: 76opx;
-   
 }
 .navigation li {
     display: none;
@@ -127,11 +125,14 @@ main{
     color: black;
     background-color: rgb(205, 108, 108);
 }
-h1, h2{
+ h2{
     border-bottom: 1.5px solid #fefcfc;
     text-align: center;
     margin-top: 25px;
     color: white;
+}
+.hero picture img{
+    width: 100%;
 }
 
 h2 {
@@ -153,13 +154,13 @@ h2 {
 .divider {
     margin-left: 10px;
     margin-right: 10px;
-    color: #e7c5c5;
+    color: #251f1f;
 }
 #sublinks {
-    color: rgb(19, 3, 169);
+    color: rgb(33 31 45);
 }
-#sublink{
-    color: rgb(2, 7, 154);
+.sublink{
+    color: rgb(2 5 120);
 }
 
 footer{
