--- a/week04/form.css
+++ b/week04/form.css
@@ -6,6 +6,8 @@ h1{
     padding: .45rem;
     color: white;
     font-size: 2.5rem;
+    border-radius: 15px 200px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 p{
     text-align: center;
